# airlines-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile.airflow  Dockerfile.fastapi  Dockerfile.streamlit  README.md  README_fastapi.md  docker-compose  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  structure.txt
.github/workflows/: branch-convention.yml  ci.yml  docs-architecture.yml  ingest.yml  ingest_airlines.yml  ingest_airports.yml  ingest_flights.yml
.github/workflows_disables/: ingest_airlines.yml  ingest_airports.yml
dags/: dst_airlines_airlines.py  dst_airlines_airports.py  dst_airlines_flights.py
docs/apis/: aviationstack.md
docs/architecture/: api-data-flow.dot  api-fastapi-role.dot  api-structure.dot  dst-airlines-project-structure.dot  ml_dst_airlines.dot  observability.dot
docs/etl/: etl.md
etl/extract/: airports_aviationstack.py  aviationstack.py  aviationstack_airlines.py  aviationstack_airports.py  aviationstack_flights.py  flights_aviationstack.py
etl/load/: common.py  metrics.py  to_mongo.py  to_mongo_airlines.py  to_mongo_airports.py  to_mongo_flights.py
etl/transform/: aviationstack_to_incoming.py
grafana/: pipeliine_health_overview  pipeline_health_overview
grafana/dashboards/: operational_overview.json
notebooks/: classification-model.ipynb  ml-model.ipynb
scripts/: render_graphviz.py
sql/: create_flight_snapshot_insights.sql
sql/init/: 01-create-dst-airlines-db.sql  02-create-flight-snapshot-insights.sql  03-create-flight-aircraft-routes.sql
src/dst_airlines/: cli.py  config.py
(+53 files in other folders)
